[package]
name = "efm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["cargo", "derive"] }
inquire = "0.7.5"
mdns-sd = "0.11.5"
reqwest = { version = "0.12.9", features = ["blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
