[package]
name = "efm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["now", "serde"] }
clap = { version = "4.5.21", features = ["cargo", "derive"] }
colored = "2.1.0"
comfy-table = { version = "7.1.3", features = ["custom_styling"] }
indicatif = "0.17.9"
inquire = "0.7.5"
mdns-sd = "0.11.5"
reqwest = { version = "0.12.9", features = ["blocking", "rustls-tls", "json"], default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
toml = "0.8.19"
